--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "FileReader": "^0.10.2",
     "fs": "^0.0.1-security"
   },
   "scripts": {
